@@ -1,5 +1,10 @@
 package backend.mulkkam.intake.service;
 
+import static backend.mulkkam.common.exception.errorCode.BadRequestErrorCode.INVALID_DATE_FOR_DELETE_INTAKE_HISTORY;
+import static backend.mulkkam.common.exception.errorCode.ForbiddenErrorCode.NOT_PERMITTED_FOR_INTAKE_HISTORY;
+import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_INTAKE_HISTORY;
+import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_INTAKE_HISTORY_DETAIL;
+
 import backend.mulkkam.common.exception.CommonException;
 import backend.mulkkam.common.exception.errorCode.NotFoundErrorCode;
 import backend.mulkkam.intake.domain.CommentOfAchievementRate;
@@ -14,6 +19,7 @@ import backend.mulkkam.intake.dto.response.IntakeDetailResponse;
 import backend.mulkkam.intake.dto.response.IntakeHistorySummaryResponse;
 import backend.mulkkam.intake.repository.IntakeHistoryDetailRepository;
 import backend.mulkkam.intake.repository.IntakeHistoryRepository;
+import backend.mulkkam.intake.repository.TargetAmountSnapshotRepository;
 import backend.mulkkam.member.domain.Member;
 import backend.mulkkam.member.repository.MemberRepository;
 import java.time.LocalDate;
@@ -27,11 +33,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import static backend.mulkkam.common.exception.errorCode.BadRequestErrorCode.INVALID_DATE_FOR_DELETE_INTAKE_HISTORY;
-import static backend.mulkkam.common.exception.errorCode.ForbiddenErrorCode.NOT_PERMITTED_FOR_INTAKE_HISTORY;
-import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_INTAKE_HISTORY;
-import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_INTAKE_HISTORY_DETAIL;
-
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 @Service
@@ -39,17 +40,16 @@ public class IntakeHistoryService {
 
     private final IntakeHistoryRepository intakeHistoryRepository;
     private final MemberRepository memberRepository;
+    private final TargetAmountSnapshotRepository targetAmountSnapshotRepository;
     private final IntakeHistoryDetailRepository intakeHistoryDetailRepository;
 
     @Transactional
     public CreateIntakeHistoryResponse create(
             IntakeDetailCreateRequest intakeDetailCreateRequest,
-            Long memberId
+            Member member
     ) {
-        Member member = getMember(memberId);
         LocalDateTime intakeDateTime = intakeDetailCreateRequest.dateTime();
-        IntakeHistory intakeHistory = intakeHistoryRepository.findByMemberIdAndHistoryDate(
-                        memberId,
+        IntakeHistory intakeHistory = intakeHistoryRepository.findByMemberAndHistoryDate(member,
                         intakeDateTime.toLocalDate()
                 )
                 .orElseGet(() -> {
@@ -67,7 +67,7 @@ public class IntakeHistoryService {
 
         List<IntakeHistoryDetail> intakeHistoryDetails = findIntakeHistoriesOfDate(
                 intakeDetailCreateRequest.dateTime().toLocalDate(),
-                memberId
+                member
         );
 
         if (intakeHistoryDetails.isEmpty()) {
@@ -91,31 +91,32 @@ public class IntakeHistoryService {
 
     public List<IntakeHistorySummaryResponse> readSummaryOfIntakeHistories(
             DateRangeRequest dateRangeRequest,
-            Long memberId
+            Member member
     ) {
-        Member member = getMember(memberId);
-        List<IntakeHistoryDetail> details = intakeHistoryDetailRepository.findAllByMemberIdAndDateRange(
-                memberId,
+        List<LocalDate> dates = dateRangeRequest.getAllDatesInRange();
+        List<IntakeHistoryDetail> details = intakeHistoryDetailRepository.findAllByMemberAndDateRange(
+                member,
                 dateRangeRequest.from(),
                 dateRangeRequest.to()
         );
-        return details.stream()
-                .collect(Collectors.groupingBy(
-                        IntakeHistoryDetail::getIntakeHistory,
-                        LinkedHashMap::new,
-                        Collectors.toList()
-                ))
-                .entrySet().stream()
-                .map(entry -> toIntakeHistorySummaryResponse(entry.getKey(), entry.getValue()))
+        return dates.stream()
+                .map(date -> {
+                    List<IntakeHistoryDetail> detailsOfDate = details.stream()
+                            .filter(detail -> detail.getIntakeHistory().getHistoryDate().equals(date))
+                            .toList();
+                    if (detailsOfDate.isEmpty()) {
+                        return createDefaultResponse(date, member);
+                    }
+                    IntakeHistory intakeHistory = detailsOfDate.getFirst().getIntakeHistory();
+                    return toIntakeHistorySummaryResponse(intakeHistory, detailsOfDate);
+                })
                 .toList();
     }
-
     @Transactional
     public void deleteDetailHistory(
             Long intakeHistoryDetailId,
-            Long memberId
+            Member member
     ) {
-        Member member = getMember(memberId);
         IntakeHistoryDetail intakeHistoryDetail = findIntakeHistoryDetailByIdWithHistoryAndMember(
                 intakeHistoryDetailId);
 
@@ -137,17 +138,13 @@ public class IntakeHistoryService {
         }
     }
 
-    private Member getMember(Long id) {
-        return memberRepository.findById(id)
-                .orElseThrow(() -> new CommonException(NotFoundErrorCode.NOT_FOUND_MEMBER));
-    }
 
     private List<IntakeHistoryDetail> findIntakeHistoriesOfDate(
             LocalDate date,
-            Long memberId
+            Member member
     ) {
-        return intakeHistoryDetailRepository.findAllByMemberIdAndDateRange(
-                memberId,
+        return intakeHistoryDetailRepository.findAllByMemberAndDateRange(
+                member,
                 date,
                 date
         );
@@ -162,8 +159,8 @@ public class IntakeHistoryService {
     }
 
     private int findStreak(Member member, LocalDate todayDate) {
-        Optional<IntakeHistory> yesterdayIntakeHistory = intakeHistoryRepository.findByMemberIdAndHistoryDate(
-                member.getId(), todayDate.minusDays(1));
+        Optional<IntakeHistory> yesterdayIntakeHistory = intakeHistoryRepository.findByMemberAndHistoryDate(
+                member, todayDate.minusDays(1));
         return yesterdayIntakeHistory.map(IntakeHistory::getStreak).orElse(0);
     }
 
@@ -212,5 +209,15 @@ public class IntakeHistoryService {
     private IntakeHistoryDetail findIntakeHistoryDetailByIdWithHistoryAndMember(Long id) {
         return intakeHistoryDetailRepository.findWithHistoryAndMemberById(id)
                 .orElseThrow(() -> new CommonException(NOT_FOUND_INTAKE_HISTORY_DETAIL));
+    }
+
+    private IntakeHistorySummaryResponse createDefaultResponse(LocalDate date, Member member) {
+        Optional<Integer> targetAmount = targetAmountSnapshotRepository.findLatestTargetAmountValueByMemberIdBeforeDate
+                (
+                        member.getId(),
+                        date
+                );
+        return targetAmount.map(integer -> new IntakeHistorySummaryResponse(date, integer))
+                .orElseGet(() -> new IntakeHistorySummaryResponse(date));
     }
 }
